[gd_scene load_steps=6 format=3 uid="uid://b4ptsysoq7mgm"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_bt0kt"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_extdp"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/CommentNode.gd" id="3_vd25i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3ph4"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.280796, 0.314859, 0.318241, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h27cn"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.280796, 0.314859, 0.318241, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="CommentNode" type="GraphNode" groups=["graph_nodes"]]
custom_minimum_size = Vector2(400, 100)
offset_right = 400.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2
theme_override_styles/titlebar = SubResource("StyleBoxFlat_x3ph4")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_h27cn")
title = "NodeComment"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_bt0kt")
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_extdp")
slot/0/draw_stylebox = false
script = ExtResource("3_vd25i")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="CommentEdit" type="TextEdit" parent="MainContainer"]
layout_mode = 2
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
